--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Welcome to my web page!
+<html>
+    <head>
+<title>My web page</title>
+
+    </head>
+
+    <body>
+<h1>Welcome to my web page!</h1>
+<p>
+
+    Check out some more content in the following pages:
+</p>
+<h3>Heading Demo</h3>
+<a href="headings.html"> Click her to go to the Heading Demo page!</a>
+
+<h3>Text Demo</h3>
+<a href="textDemo.html"> Click her to go to the Text Demo page!</a>
+
+<h3>Text Demo</h3>
+<a href="Bulleted List-1.html"> Click her to go to the Text Demo page!</a>
+
+<h3>Text Demo</h3>
+<a href="Ordered Text-1.html"> Click her to go to the Text Demo page!</a>
+    </body>
+
+    <footer>
+
+      <p>&copy; 2021, Bootcamp!</p>  
+    </footer>
+
+</html>
